# Agents_with_MCP

./: .env.example  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  structure.txt  structure.yml  test_web_agent.py
agents/: arxiv_agent.py  multimodal_agent.py  web_agent.py
brainstrom/: dir_structure.yml
mcp_client/: arxiv_client.py  client.py  web_client.py
mcp_server/: arxiv_server.py  multimodal_server.py  web_server.py
src/: memory_cache.py  orchestrator.py  validator.py
test/: test_arxiv_agent.py  test_mcp_client.py  test_memory.py  test_multimodal_agent.py  test_web_agent.py
util/: logger.py
utils/: logger.py
