[project]
name = "agents-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chroma>=0.2.0",
    "chromadb>=1.0.10",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
]
